<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    tools:context=".ForgetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gifApp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:src="@drawable/skate" />

        <TextView
            android:id="@+id/textForgetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textForgetPass"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textForgetPassInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/textForgetPassInfo" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textEmail" />

        <EditText
            android:id="@+id/editTextEmailFP"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:autofillHints="john.doe@mail.com"
            android:ems="10"
            android:hint="@string/editTextEmail"
            android:inputType="textEmailAddress" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15dp">


        <TextView
            android:id="@+id/textFirstName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/textFirstName" />

        <EditText
            android:id="@+id/editTextFirstNameFP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="John"
            android:ems="10"
            android:hint="@string/editTextFirstName"
            android:inputType="textPersonName" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15dp">


        <TextView
            android:id="@+id/textLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textLastName" />

        <EditText
            android:id="@+id/editTextLastNameFP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints="Doe"
            android:ems="10"
            android:hint="@string/editTextLastName"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/textPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <EditText
                android:id="@+id/editTextPasswordFP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:ems="10"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/buttonShowHide"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buttonShowHide" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonSearch" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp">

        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:text="@string/buttonEdit" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:text="@string/buttonDelete" />

    </LinearLayout>

</LinearLayout>