<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="40dp"
    android:paddingRight="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingTop="10dp"
        android:text="@string/textCategory"
        android:textColor="@color/purple_500" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:paddingStart="30dp"
        android:paddingBottom="5dp"
        android:text="Large Text"
        android:id="@+id/textCategory"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/textApp"
        android:textColor="@color/teal_700" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingStart="30dp"
        android:paddingBottom="5dp"
        android:text="Medium Text"
        android:id="@+id/textName"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/textSummary"
        android:textColor="@color/teal_700" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:paddingStart="30dp"
        android:paddingBottom="5dp"
        android:text="Small Text"
        android:id="@+id/textSummary"
        tools:ignore="RtlSymmetry" />
</LinearLayout>
